# FL_ids

./: .gitignore  README.md  pyproject.toml
fl_ids/: client_app.py  server_app.py  strategy.py
fl_ids/utils/: data_loader.py  model_loader.py
