[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl_ids"
version = "1.0.0"
description = "Federated Learning for Intrusion Detection System"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.25.0",
    "tensorflow-cpu>=2.15.0 ; platform_machine == 'x86_64'", # Versión más moderna y estable para Py3.12
    "numpy<2.0.0",        # Crucial para evitar el DeprecationWarning y errores de Keras
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "wandb==0.17.8",
]
[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "fl_ids.server_app:app"
clientapp = "fl_ids.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
local-epochs = 1
batch-size = 64
min-available-clients = 3
min-fit-clients = 3
min-evaluate-clients = 3
fraction-train = 1.0
fraction-evaluate = 1.0

[tool.flwr.federations]
default = "my-federation"

[tool.flwr.federations.my-federation]
address = "127.0.0.1:9093" # Address of the Exec API
insecure = true